sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:10: error: not found: value length
    for (i <- 0 to length-2){
                   ^